crates/test-files/fixtures/compile_errors/trait_fn_without_self.fe
trait Foo {
    fn this_has_no_self();
}
